# cloud-sre-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  environment.py  inference.py  models.py  openenv.yaml  push_to_github.bat  pyproject.toml  requirements.txt  tasks.py
outputs/evals/: .gitkeep
outputs/logs/: .gitkeep
server/: Dockerfile  __init__.py  app.py  main.py  requirements.txt  sre_environment.py
